config/openshift/proxy.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc
  annotations:
      "service.alpha.openshift.io/serving-cert-secret-name": kube-gateway-secrets
spec:
  type: LoadBalancer
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: route
spec:
  host: kube-gateway.apps-crc.testing
  to:
    kind: Service
    name: kube-gateway-svc
    weight: 100
  tls:
    termination: reencrypt
  port:
    targetPort: 8080
  wildcardPolicy: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: proxy
spec:
  replicas: 1
  template:
    spec:
      containers:
      - image: proxy
        name: kube-gateway
        ports:
        - name: kube-gateway-https
          containerPort: 8080
        volumeMounts:
        - name: secrets
          mountPath: "/secrets"
        - name: jwt-secret
          mountPath: "/jwt-secret"
        - name: web-app
          mountPath: "/app/web"
        command:
        - "./kube-gateway"
        - "-api-server=$(API_URL)"
        - "-ca-file=/var/run/secrets/kubernetes.io/serviceaccount/ca.crt"
        - "-cert-file=/secrets/tls.crt"
        - "-key-file=/secrets/tls.key"
        - "-oauth-server-disable"
        - "-base-address=https://$(ROUTE_URL)"
        - "-listen=$(LISTEN)"
        - "-jwt-token-key-file=/jwt-secret/cert.pem"
        - "-k8s-bearer-token-file=/var/run/secrets/kubernetes.io/serviceaccount/token"
        - "-k8s-bearer-token-passthrough=$(TOKEN_PASSTHROUGH)"
      volumes:
      - name: jwt-secret
        secret:
          secretName: kube-gateway-jwt-secret
      - name: secrets
        secret:
          secretName: kube-gateway-secrets
      - name: web-app
        emptyDir: {}
      serviceAccountName: sa
